crates/locus-core/tests/common/snapshots/regression_render_tag__common__hub__hub_single_tag_locus_v1_tag36h11_1280x720_gwlf.snap
---
source: crates/locus-core/tests/common/hub.rs
expression: report
---
summary:
  dataset_size: 50
  mean_recall: 1
  mean_precision: 1
  mean_rmse: 0.7512
  mean_reprojection_rmse: 0.7466
  p50_translation_error: 0.0045
  p90_translation_error: 0.0215
  p99_translation_error: 0.0447
  p50_rotation_error: 0.1067
  p90_rotation_error: 0.3605
  p99_rotation_error: 3.1299
  mean_hamming: 0
  mean_total_ms: "[DURATION]"
  worst_offenders:
    - filename: scene_0021_cam_0000.png
      missed: 0
      extra: 0
      rmse: 3.0887
    - filename: scene_0032_cam_0000.png
      missed: 0
      extra: 0
      rmse: 1.7869
    - filename: scene_0033_cam_0000.png
      missed: 0
      extra: 0
      rmse: 1.4097
    - filename: scene_0009_cam_0000.png
      missed: 0
      extra: 0
      rmse: 1.0663
    - filename: scene_0005_cam_0000.png
      missed: 0
      extra: 0
      rmse: 1.0202
