crates/locus-core/tests/common/snapshots/regression_render_tag__common__hub__hub_single_tag_locus_v1_tag36h11_1920x1080_edlines_moments.snap
---
source: crates/locus-core/tests/common/hub.rs
assertion_line: 489
expression: report
---
summary:
  dataset_size: 45
  mean_recall: 0.9777777777777777
  mean_precision: 1
  mean_rmse: 0.6889
  mean_reprojection_rmse: 0.6354
  p50_translation_error: 0.0052
  p90_translation_error: 0.032
  p99_translation_error: 0.0579
  p50_rotation_error: 0.0851
  p90_rotation_error: 0.2807
  p99_rotation_error: 1.8053
  mean_hamming: 0
  mean_total_ms: "[DURATION]"
  worst_offenders:
    - filename: scene_0022_cam_0000.png
      missed: 1
      extra: 0
      rmse: 0
    - filename: scene_0002_cam_0000.png
      missed: 0
      extra: 0
      rmse: 4.4704
