crates/locus-core/tests/common/snapshots/regression_render_tag__common__hub__hub_single_tag_locus_v1_tag36h11_1920x1080_gwlf.snap
---
source: crates/locus-core/tests/common/hub.rs
assertion_line: 489
expression: report
---
summary:
  dataset_size: 45
  mean_recall: 1
  mean_precision: 1
  mean_rmse: 0.9279
  mean_reprojection_rmse: 0.984
  p50_translation_error: 0.0056
  p90_translation_error: 0.0395
  p99_translation_error: 0.0831
  p50_rotation_error: 0.1059
  p90_rotation_error: 1.0657
  p99_rotation_error: 4.2638
  mean_hamming: 0
  mean_total_ms: "[DURATION]"
  worst_offenders:
    - filename: scene_0038_cam_0000.png
      missed: 0
      extra: 0
      rmse: 4.0491
    - filename: scene_0044_cam_0000.png
      missed: 0
      extra: 0
      rmse: 2.86
    - filename: scene_0026_cam_0000.png
      missed: 0
      extra: 0
      rmse: 2.4072
    - filename: scene_0022_cam_0000.png
      missed: 0
      extra: 0
      rmse: 2.3446
    - filename: scene_0035_cam_0000.png
      missed: 0
      extra: 0
      rmse: 2.3284
