crates/locus-core/tests/common/snapshots/regression_render_tag__common__hub__hub_single_tag_locus_v1_tag36h11_1920x1080_highaccuracy.snap
---
source: crates/locus-core/tests/common/hub.rs
assertion_line: 489
expression: report
---
summary:
  dataset_size: 45
  mean_recall: 0.9555555555555556
  mean_precision: 0.9777777777777777
  mean_rmse: 0.2909
  mean_reprojection_rmse: 0.1934
  p50_translation_error: 0.0007
  p90_translation_error: 0.0102
  p99_translation_error: 0.0247
  p50_rotation_error: 0.071
  p90_rotation_error: 0.4942
  p99_rotation_error: 1.2443
  mean_hamming: 0
  mean_total_ms: "[DURATION]"
  worst_offenders:
    - filename: scene_0022_cam_0000.png
      missed: 1
      extra: 1
      rmse: 0
    - filename: scene_0031_cam_0000.png
      missed: 1
      extra: 0
      rmse: 0
    - filename: scene_0002_cam_0000.png
      missed: 0
      extra: 0
      rmse: 5.5293
