crates/locus-core/tests/common/snapshots/regression_render_tag__common__hub__hub_single_tag_locus_v1_tag36h11_3840x2160_edlines.snap
---
source: crates/locus-core/tests/common/hub.rs
expression: report
---
summary:
  dataset_size: 45
  mean_recall: 0.8
  mean_precision: 1
  mean_rmse: 0.493
  mean_reprojection_rmse: 0.4911
  p50_translation_error: 0.0099
  p90_translation_error: 0.0857
  p99_translation_error: 0.1075
  p50_rotation_error: 0.0856
  p90_rotation_error: 0.2373
  p99_rotation_error: 0.8019
  mean_hamming: 0
  mean_total_ms: "[DURATION]"
  worst_offenders:
    - filename: scene_0009_cam_0000.png
      missed: 1
      extra: 0
      rmse: 0
    - filename: scene_0020_cam_0000.png
      missed: 1
      extra: 0
      rmse: 0
    - filename: scene_0022_cam_0000.png
      missed: 1
      extra: 0
      rmse: 0
    - filename: scene_0023_cam_0000.png
      missed: 1
      extra: 0
      rmse: 0
    - filename: scene_0025_cam_0000.png
      missed: 1
      extra: 0
      rmse: 0
